--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Přihlášení</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  /*metatag viewport*/
 </head>
 <body>
   <div class="container">
@@ -29,5 +29,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <style>
+    /* Media query pro mobilní zařízení */
+    @media (max-width: 767px) {
+      body {
+        background-color: #f0f0f0;
+      }
+    }
+
+    /* Media query pro desktop */
+    @media (min-width: 768px) {
+      body {
+        background-color: #fff;
+      }
+    }
+  </style>
 </body>
 </html>
