--- a/registrace.html
+++ b/registrace.html
@@ -32,7 +32,7 @@
           </div>
           <button type="submit" class="btn btn-primary">Registrovat se</button>
         </form>
-        <p class="mt-3">Máte již účet? <a href="prihlaseni.html">Přihlásit se</a></p>
+        <p class="mt-3">Máte již účet? <a href="index.html">Přihlásit se</a></p>
       </div>
     </div>
   </div>
