--- a/registrace.html
+++ b/registrace.html
@@ -40,5 +40,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<style>
+    /* Media query pro mobilní zařízení */
+    @media (max-width: 767px) {
+      body {
+        background-color: #f0f0f0;
+      }
+    }
+
+    /* Media query pro desktop */
+    @media (min-width: 768px) {
+      body {
+        background-color: #fff;
+      }
+    }
+  </style>
+  
 </body>
 </html>
