--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 <title>Bootstrap</title>
@@ -27,33 +26,26 @@
       </style>
 </head>
 <body>
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-  <div class="col-md-6">
-    <div class="card">
-      <h5 class="card-header">Login</h5>
-      <div class="card-body text-center">
-        <form>
-          <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="username">
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password">
-          </div>
-          <div class="mb-3 form-check">
-            <label class="form-check-label" for="rememberMe">Remember me</label>
-            <input type="checkbox" class="form-check-input" id="rememberMe">
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </div>
-      <div class="card-footer text-center">
-        <a href="#" class="card-link">Forgot password?</a>
-        <a href="#" class="card-link">Create an account</a>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Company Name</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">News Feed</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Profiles</a>
+        </li>
+      </ul>
     </div>
   </div>
-</div>
+</nav>
 </body>
 </html>
