--- a/registrace.html
+++ b/registrace.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registrace</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" data-no-delete="yes" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <style>
+        html, body {
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+        }
+        body {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+            font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+        *,
+            ::before,
+            ::after {
+                box-sizing: border-box;
+                border-width: 0;
+                border-style: solid;
+                border-color: #ffffff;
+            }
+      </style>
 </head>
 <body>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h2 class="mt-4">Registrace</h2>
-        <form>
-          <div class="form-group">
-            <label for="firstName">Jméno</label>
-            <input type="text" class="form-control" id="firstName" placeholder="Vaše jméno">
-          </div>
-          <div class="form-group">
-            <label for="lastName">Příjmení</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Vaše příjmení">
-          </div>
-          <div class="form-group">
-            <label for="email">E-mail</label>
-            <input type="email" class="form-control" id="email" placeholder="Váš e-mail">
-          </div>
-          <div class="form-group">
-            <label for="password">Heslo</label>
-            <input type="password" class="form-control" id="password" placeholder="Vaše heslo">
-          </div>
-          <div class="form-group">
-            <label for="profileImage">Profilová fotka</label>
-            <input type="file" class="form-control-file" id="profileImage">
-          </div>
-          <button type="submit" class="btn btn-primary">Registrovat se</button>
-        </form>
-        <p class="mt-3">Máte již účet? <a href="index.html">Přihlásit se</a></p>
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Advanced Registration Form</h1>
+    <form>
+      <div class="mb-3">
+        <label for="fullName" class="form-label">Full Name</label>
+        <input type="text" class="form-control" id="fullName" placeholder="Enter your full name" required>
       </div>
-    </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email Address</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter your email address" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+      </div>
+      <div class="mb-3">
+        <label for="confirmPassword" class="form-label">Confirm Password</label>
+        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
+      </div>
+      <div class="mb-3">
+        <label for="profilePicture" class="form-label">Profile Picture</label>
+        <input type="file" class="form-control" id="profilePicture" accept="image/*" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Register</button>
+      <p class="mt-3">If you have an account, you can <a href="login.html">log in here</a>.</p>
+    </form>
   </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 </html>
